<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.Events"
    tools:layout_editor_absoluteY="25dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/Guides"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="150dp"
        android:layout_height="86dp"
        android:layout_marginTop="232dp"
        android:text="@string/guides"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Events"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/PersonalArea"
        android:layout_width="150dp"
        android:layout_height="86dp"
        android:layout_marginTop="49dp"
        android:text="@string/personal_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/FindFriends"
        app:layout_constraintTop_toBottomOf="@+id/Guides" />

    <Button
        android:id="@+id/FindFriends"
        android:layout_width="150dp"
        android:layout_height="86dp"
        android:layout_marginTop="48dp"
        android:text="@string/search_friends"
        app:layout_constraintEnd_toStartOf="@+id/PersonalArea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Events" />

    <Button
        android:id="@+id/Events"
        android:layout_width="150dp"
        android:layout_height="86dp"
        android:layout_marginTop="232dp"
        android:text="@string/events"
        app:layout_constraintEnd_toStartOf="@+id/Guides"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>