<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="325dp"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/md_keylines"
    android:layout_marginRight="@dimen/md_keylines"
    android:layout_marginBottom="@dimen/md_keylines"
    android:foreground="?attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/tile_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_image_height"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/photo"
            android:scaleType="centerCrop"
            tools:src="@color/photo" />

        <TextView
            android:id="@+id/tile_title"
            android:layout_width="313dp"
            android:layout_height="127dp"
            android:layout_alignBottom="@+id/tile_image"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_marginBottom="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/black"
            tools:text="Name" />

        <TextView
            android:id="@+id/tile_text"
            android:layout_width="76dp"
            android:layout_height="40dp"
            android:layout_below="@+id/card_image"
            android:layout_alignBottom="@+id/tile_title"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_marginTop="-1dp"
            android:layout_marginRight="@dimen/md_keylines"
            android:layout_marginBottom="-40dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/category"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/article_subheading" />

        <TextView
            android:id="@+id/tile_category_text"
            android:layout_width="285dp"
            android:layout_height="40dp"
            android:layout_below="@+id/card_image"
            android:layout_alignBottom="@+id/tile_image"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="@dimen/md_keylines"
            android:layout_marginBottom="-38dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/category"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/article_subheading" />

        <TextView
            android:id="@+id/tile_text2"
            android:layout_width="76dp"
            android:layout_height="40dp"
            android:layout_below="@+id/card_image"
            android:layout_alignBottom="@+id/tile_title"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_marginTop="41dp"
            android:layout_marginRight="@dimen/md_keylines"
            android:layout_marginBottom="-80dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/date"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/article_subheading" />

        <TextView
            android:id="@+id/tile_date_text"
            android:layout_width="285dp"
            android:layout_height="40dp"
            android:layout_below="@+id/card_image"
            android:layout_alignBottom="@+id/tile_image"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="@dimen/md_keylines"
            android:layout_marginBottom="-78dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/date"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/article_subheading" />

        <Button
            android:id="@+id/tile_delete_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_below="@+id/card_text"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="26dp"

            android:layout_marginBottom="115dp"
            android:text="@string/add"
            android:textColor="?attr/colorPrimary" />

        <Button
            android:id="@+id/site_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_below="@+id/card_text"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="108dp"
            android:layout_marginTop="26dp"

            android:layout_marginBottom="0dp"
            android:text="на сайт"
            android:textColor="?attr/colorPrimary" />

    </RelativeLayout>
</android.support.v7.widget.CardView>
